Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта.md
@@ -28,5 +28,5 @@
     - Идея **вечного возвращения** приходит к Ницше у конкретного **камня в Зильс-Марии**, конденсируясь из телесного опыта в ландшафте.
     - **Критика "твердой земли"**: Болезнь заставляет Ницше ощущать тяжесть гравитации.
 - **[[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггер, Мартин]] и Шварцвальд**:
-    - Его философия [[Четверица\|четверицы]] неразрывно связана с ландшафтом "темного леса" и его хижины.
+    - Его философия [[Кейс Геофилософия/3 Понятия/Четверица\|четверицы]] неразрывно связана с ландшафтом "темного леса" и его хижины.
     - **Персонификация Земли**: Чтобы понять Хайдеггера, нужно "стать тектоническими существами".
