--- a/src/site/notes/Кейс Геофилософия/2 Темы/Метафизика ландшафта.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Метафизика ландшафта.md
@@ -15,4 +15,4 @@
 ## Примеры анализа
 - **[[Кьеркегор, Сёрен\|Кьеркегор, Сёрен]]**: Анализируется через **"задержанное дыхание Авраама"** на горе Мориа.
 - **[[Кейс Геофилософия/4 Авторы/Ницше, Фридрих\|Ницше, Фридрих]]**: Идея **вечного возвращения** приходит к нему у конкретного **камня в Зильс-Марии**.
-- **[[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггер, Мартин]]**: Его философия [[Четверица\|четверицы]] неразрывно связана с ландшафтом **[[Шварцвальд\|Шварцвальд]]**.
+- **[[Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин\|Хайдеггер, Мартин]]**: Его философия [[Кейс Геофилософия/3 Понятия/Четверица\|четверицы]] неразрывно связана с ландшафтом **[[Шварцвальд\|Шварцвальд]]**.
