--- a/src/site/notes/Кейс Геофилософия/3 Понятия/0 Индекс – Понятия.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/0 Индекс – Понятия.md
@@ -66,7 +66,7 @@
 - [[Кейс Геофилософия/3 Понятия/Феноменология как археология\|Феноменология как археология]]
 - [[Хтонь\|Хтонь]]
 - [[Хтулхуцен\|Хтулхуцен]]
-- [[Четверица\|Четверица]]
+- [[Кейс Геофилософия/3 Понятия/Четверица\|Четверица]]
 - [[Кейс Геофилософия/3 Понятия/Чрезвычайное положение\|Чрезвычайное положение]]
 - [[Кейс Геофилософия/3 Понятия/Шизоанализ\|Шизоанализ]]
 - [[Кейс Геофилософия/3 Понятия/Эмерджентный эффект\|Эмерджентный эффект]]
