--- a/src/site/notes/Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/Хайдеггер, Мартин.md
@@ -8,5 +8,5 @@
 
 ## Вклад в геофилософию
 - **[[Кейс Геофилософия/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]] ([[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога, Валерий]])**: [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога]] подробно анализирует его философию через призму его ландшафта — **[[Шварцвальд\|Шварцвальд]]**. Его хижина, горные тропы, "темный лес" — все это становится частью его "геологии мысли".
-- **[[Четверица\|Четверица]] (Geviert)**: Его концепция мира как игры Земли, Неба, Божественного и Смертных. [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога]] интерпретирует [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] в этой структуре не как стабильное основание, а как "силу разрыва".
+- **[[Кейс Геофилософия/3 Понятия/Четверица\|Четверица]] (Geviert)**: Его концепция мира как игры Земли, Неба, Божественного и Смертных. [[Кейс Геофилософия/4 Авторы/Подорога, Валерий\|Подорога]] интерпретирует [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] в этой структуре не как стабильное основание, а как "силу разрыва".
 - **Персонификация Земли**: Философия Хайдеггера требует от читателя принять на себя опыт [[Кейс Геофилософия/3 Понятия/Земля\|Земли]], "стать тектоническим существом".
