--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -12,7 +12,7 @@
 
 ## **Три способа исследования**
 
-Вы можете изучать этот материал тремя основными способами:
+Вы можете изучать этот материал двумя основными способами:
 
 ### **1. Через интерактивный граф (визуальный способ)**
 
@@ -24,14 +24,15 @@
     - **Перемещайте узлы** (кружки), зажав их левой кнопкой мыши.
     - **Приближайте и отдаляйте** карту колесиком мыши.
     - **Нажмите на любой узел** (например, на понятие «Хтонь»), чтобы сфокусироваться на нем и подсветить его прямые связи.
+	- **Управление графом:** В его настройках вы можете изменить **Глубину (Depth)**, чтобы увидеть больше связей, а также использовать иконки **🌐 (Глобус)** для перехода на глобальный граф и **↖↗ (Стрелки)** для полноэкранного режима
         
-### **2. Через перекрестные ссылки (текстовый способ)**
+
+### **2. Через разделы, папки и перекрестные ссылки
+
+Если вы предпочитаете более традиционный подход, воспользуйтесь оглавлением ниже. Оно содержит ссылки на основные разделы (лекции, темы, понятия), которые помогут вам систематически изучить материал.
 
 Весь текст в этой базе пронизан внутренними ссылками, которые выглядят как `[[Название заметки]]`. Нажатие на такую ссылку мгновенно перенесет вас на соответствующую страницу, позволяя интуитивно следовать за ходом мысли от одной идеи к другой.
 
-### **3. Через разделы и папки (структурный способ)**
-
-Если вы предпочитаете более традиционный подход, воспользуйтесь оглавлением ниже. Оно содержит ссылки на основные разделы (лекции, темы, понятия), которые помогут вам систематически изучить материал.
 
 ---
 
