Published multiple files

--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -10,7 +10,7 @@
 
 Добро пожаловать! Эта база знаний создана на основе транскриптов [одноименного курса лекций](https://www.youtube.com/watch?v=sZ5y-9kIbDw&list=PLUzCBwHhuhXG8TIfQFfTxn4pGj1stdJAJ) Максимилиана Неаполитанского и представляет собой введение в мир геофилософской мысли.
 
-## **Три способа исследования**
+## Два способа исследования**
 
 Вы можете изучать этот материал двумя основными способами:
 
