Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы.md
@@ -4,7 +4,7 @@
 
 # Лекция 4: Политики заботы. Поврежденная земля, Мортон и Харауэй
 
-**Основные понятия:** [[Кейс Геофилософия/3 Понятия/Поврежденная земля\|Поврежденная земля]], [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]], [[Хтулхуцен\|Хтулхуцен]], [[Гиперобъекты\|Гиперобъекты]], [[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]], [[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]], [[Кейс Геофилософия/3 Понятия/Симпоэзис\|Симпоэзис]]
+**Основные понятия:** [[Кейс Геофилософия/3 Понятия/Поврежденная земля\|Поврежденная земля]], [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]], [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]], [[Гиперобъекты\|Гиперобъекты]], [[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]], [[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]], [[Кейс Геофилософия/3 Понятия/Симпоэзис\|Симпоэзис]]
 **Ключевые авторы:** [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон, Тимоти]], [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]], [[Кейс Геофилософия/4 Авторы/Брайдотти, Рози\|Брайдотти, Рози]]
 
 ## Тезисы
@@ -21,9 +21,9 @@
 - **[[Кейс Геофилософия/3 Понятия/Темная экология\|Темная экология]]**: Это "экология без Природы". [[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон]] утверждает, что сама концепция "Природы" (как чего-то чистого) — это конструкт.
 - **Философия после конца мира**: Мир как универсальное понятие закончился. Мы живем в окружении гиперобъектов.
 
-### 3. [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]]: от [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцена]] к [[Хтулхуцен\|Хтулхуцену]]
+### 3. [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]]: от [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцена]] к [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцену]]
 - **Критика [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцена]]**: [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй]] считает, что этот термин все еще ставит в центр Человека.
-- **[[Хтулхуцен\|Хтулхуцен]]**: Новая эпоха, названная в честь хтонических (земных) существ. Это время, когда мы учимся **"оставаться со смутой" (staying with the trouble)**.
+- **[[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]]**: Новая эпоха, названная в честь хтонических (земных) существ. Это время, когда мы учимся **"оставаться со смутой" (staying with the trouble)**.
 - **Ключевые практики Хтулхуцена**:
     - **[[Кейс Геофилософия/3 Понятия/Симпоэзис\|Симпоэзис]]**: "Со-творение", совместное становление с другими видами.
     - **[[Кейс Геофилософия/3 Понятия/Компост\|Компост]], а не постчеловек**: Мы все — часть одной компостной кучи.
