--- a/src/site/notes/Кейс Геофилософия/2 Темы/Критика антропоцентризма.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Критика антропоцентризма.md
@@ -18,5 +18,5 @@
 - **Философский анти-антропоцентризм**:
     - **[[Кейс Геофилософия/2 Темы/Темные теории\|Темные теории]]** пытается помыслить реальность, существующую независимо от человека.
     - **[[Кейс Геофилософия/4 Авторы/Мортон, Тимоти\|Мортон, Тимоти]]** с его концепцией [[Гиперобъекты\|гиперобъектов]] показывает существование сущностей, несоизмеримых с человеком.
-    - **[[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]]** предлагает перейти от [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]] к [[Хтулхуцен\|Хтулхуцен]].
+    - **[[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]]** предлагает перейти от [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]] к [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]].
 - **[[Кейс Геофилософия/2 Темы/Антикоперниканский поворот\|Антикоперниканский поворот]]**: Направлен против тенденции "вращать" всю философию вокруг **субъекта** и предлагает вернуть [[Кейс Геофилософия/3 Понятия/Земля\|Землю]] как общее основание опыта.
