--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Антропоцен.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Антропоцен.md
@@ -13,4 +13,4 @@
 
 ## Критика и альтернативы
 - **[[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]]** критикует термин за то, что он все еще ставит в центр Человека (*Anthropos*), пусть и в негативном ключе.
-- В качестве альтернативы она предлагает термин **[[Хтулхуцен\|Хтулхуцен]]** — эпоху хтонических, земных существ, где акцент делается на совместном выживании и взаимосвязях всех видов на поврежденной планете.
+- В качестве альтернативы она предлагает термин **[[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]]** — эпоху хтонических, земных существ, где акцент делается на совместном выживании и взаимосвязях всех видов на поврежденной планете.
