--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Компост.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Компост.md
@@ -9,7 +9,7 @@
 ## Суть метафоры
 - **Смешивание и становление-с**: Компост — это место, где органические остатки (люди, животные, растения, микробы) смешиваются, разлагаются и преобразуются во что-то новое (плодородную почву). Это образ **[[Кейс Геофилософия/3 Понятия/Симпоэзис\|Симпоэзис]]** — совместного становления и "со-творения".
 - **Отказ от индивидуализма**: В компостной куче нет отдельных, автономных индивидов. Все являются частью общего процесса гниения и возрождения.
-- **Жизнь и смерть вместе**: Компост неразрывно связывает жизнь (новые ростки) и смерть (разложение). Это метафора для жизни в эпоху [[Хтулхуцен\|Хтулхуцен]], где нужно учиться не только "жить вместе", но и "умирать вместе".
+- **Жизнь и смерть вместе**: Компост неразрывно связывает жизнь (новые ростки) и смерть (разложение). Это метафора для жизни в эпоху [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]], где нужно учиться не только "жить вместе", но и "умирать вместе".
 
 ## Значение для геофилософии
 - Компост — это метафора для [[Кейс Геофилософия/3 Понятия/Земля\|Земли]] как живого, динамичного процесса, где все виды взаимосвязаны.
