--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Поврежденная земля.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Поврежденная земля.md
@@ -7,7 +7,7 @@
 **Поврежденная земля** — это центральное понятие в философии [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Донны Харауэй]], описывающее современное состояние планеты.
 
 ## Что такое поврежденная земля?
-- Это [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] в эпоху [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцена]] и [[Хтулхуцен\|Хтулхуцена]], чьи экосистемы, климат и биоразнообразие необратимо изменены и повреждены деятельностью человека.
+- Это [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] в эпоху [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцена]] и [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцена]], чьи экосистемы, климат и биоразнообразие необратимо изменены и повреждены деятельностью человека.
 - Это не метафора, а **реальное материальное состояние** планеты.
 
 ## Этическая и политическая установка
