--- a/src/site/notes/Кейс Геофилософия/4 Авторы/0 Индекс — Авторы.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/0 Индекс — Авторы.md
@@ -22,6 +22,7 @@
 - [[Кейс Геофилософия/4 Авторы/Деррида, Жак\|Деррида, Жак]]
 - [[Кейс Геофилософия/4 Авторы/Кант, Иммануил\|Кант, Иммануил]]
 - [[Кьеркегор, Сёрен\|Кьеркегор, Сёрен]]
+- [[Кейс Геофилософия/4 Авторы/Лавкрафт, Говард\|Лавкрафт, Говард]]
 - [[Кейс Геофилософия/4 Авторы/Лавлок, Джеймс\|Лавлок, Джеймс]]
 - [[Кейс Геофилософия/4 Авторы/Латур, Бруно\|Латур, Бруно]]
 - [[Кейс Геофилософия/4 Авторы/Лиотар, Жан-Франсуа\|Лиотар, Жан-Франсуа]]
