--- a/src/site/notes/Кейс Геофилософия/2 Темы/Политики заботы.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Политики заботы.md
@@ -10,7 +10,7 @@
 - **Распространение на не-людей**: Политики заботы распространяются на животных, растения, экосистемы и всю планету. Речь идет о **безопасности всех тел**, человеческих и нечеловеческих.
 - **Противостояние эксплуатации**: Эти практики противостоят логике эксплуатации и инструментализации.
 
-## [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]] и [[Хтулхуцен\|Хтулхуцен]]
+## [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй, Донна]] и [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]]
 - **"Оставаться со смутой" (*Staying with the trouble*)**: Учиться жить и умирать вместе со всеми существами, разделяя общую уязвимость.
 - **[[Кейс Геофилософия/3 Понятия/Симпоэзис\|Симпоэзис]]**: Практики заботы реализуются через "со-творение" — совместное становление с другими видами.
 - **[[Кейс Геофилософия/3 Понятия/Компост\|Компост]], а не постчеловек**: Забота — это работа в "компостной куче", где люди и не-люди смешиваются, поддерживая друг друга.
