--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Симпоэзис.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Симпоэзис.md
@@ -13,5 +13,5 @@
 ## Ключевые идеи
 - **Коэволюция**: Симпоэзис — это фундаментальный принцип коэволюции. Например, человек и собака эволюционировали вместе, формируя друг друга.
 - **Отказ от индивидуализма**: Этот концепт подрывает идею замкнутого, автономного индивида. Мы все — часть сложных сборок и коллективов.
-- **Практика для [[Хтулхуцен\|Хтулхуцен]]**: Симпоэзис — это ключевая практика для выживания на [[Кейс Геофилософия/3 Понятия/Поврежденная земля\|поврежденной земле]].
+- **Практика для [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]]**: Симпоэзис — это ключевая практика для выживания на [[Кейс Геофилософия/3 Понятия/Поврежденная земля\|поврежденной земле]].
 - **[[Кейс Геофилософия/3 Понятия/Компост\|Компост]]**: Метафора [[Кейс Геофилософия/3 Понятия/Компост\|компоста]] является идеальной иллюстрацией симпоэзиса: в компостной куче разные организмы совместно преобразуют смерть в жизнь.
