--- a/src/site/notes/Кейс Геофилософия/5 Источники/Книга - Оставаясь со смутой (Харауэй).md
+++ b/src/site/notes/Кейс Геофилософия/5 Источники/Книга - Оставаясь со смутой (Харауэй).md
@@ -10,7 +10,7 @@
 Эта книга — ключевой источник для [[Лекция 04 - Политики заботы (Мортон и Харауэй)\|четвертой лекции]], в которой излагаются основные идеи [[Кейс Геофилософия/4 Авторы/Харауэй, Донна\|Харауэй]] о выживании на [[Кейс Геофилософия/3 Понятия/Поврежденная земля\|поврежденной планете]].
 
 ## Основные идеи
-- **[[Хтулхуцен\|Хтулхуцен]]**: Харауэй предлагает этот термин как альтернативу [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцену]]. [[Хтулхуцен\|Хтулхуцен]] — это эпоха хтонических, земных существ, время для обучения совместной жизни и смерти.
+- **[[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]]**: Харауэй предлагает этот термин как альтернативу [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцену]]. [[Кейс Геофилософия/3 Понятия/Хтулхуцен\|Хтулхуцен]] — это эпоха хтонических, земных существ, время для обучения совместной жизни и смерти.
 - **"Оставаться со смутой"**: Центральный призыв книги. Это означает не искать простых утопических или апокалиптических решений экологического кризиса, а принять сложность, ответственность и необходимость совместного выживания в запутанном мире.
 - **[[Кейс Геофилософия/3 Понятия/Симпоэзис\|Симпоэзис]]**: Концепция "со-творения" или "создания-вместе". Харауэй утверждает, что ничто не создает себя само; все существа являются результатом коллективных и взаимозависимых процессов.
 - **[[Кейс Геофилософия/3 Понятия/Компост\|Компост]], а не постчеловек**: Мир — это "компостная куча", где все виды (люди, животные, микробы) смешиваются, разлагаются и создают новые формы жизни.
