Published multiple files

--- a/src/site/notes/Кейс Геофилософия/2 Темы/Антикоперниканский поворот.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Антикоперниканский поворот.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Антикоперниканский поворот","permalink":"/kejs-geofilosofiya/2-temy/antikopernikanskij-povorot/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Антикоперниканский поворот","permalink":"/kejs-geofilosofiya/2-temy/antikopernikanskij-povorot/"}
 ---
 
 
