--- a/src/site/notes/Кейс Геофилософия/2 Темы/История картографии.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/История картографии.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/История картографии","permalink":"/kejs-geofilosofiya/2-temy/istoriya-kartografii/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/История картографии","permalink":"/kejs-geofilosofiya/2-temy/istoriya-kartografii/"}
 ---
 
 
