--- a/src/site/notes/Кейс Геофилософия/2 Темы/Критика антропоцентризма.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Критика антропоцентризма.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Критика антропоцентризма","permalink":"/kejs-geofilosofiya/2-temy/kritika-antropoczentrizma/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Критика антропоцентризма","permalink":"/kejs-geofilosofiya/2-temy/kritika-antropoczentrizma/"}
 ---
 
 
