--- a/src/site/notes/Кейс Геофилософия/2 Темы/Критика картографии.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Критика картографии.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Критика картографии","permalink":"/kejs-geofilosofiya/2-temy/kritika-kartografii/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Критика картографии","permalink":"/kejs-geofilosofiya/2-temy/kritika-kartografii/"}
 ---
 
 # Критика картографии
