--- a/src/site/notes/Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель).md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель).md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель)","permalink":"/kejs-geofilosofiya/2-temy/mnozhestvennost-mirov-prirod-zemel/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель)","permalink":"/kejs-geofilosofiya/2-temy/mnozhestvennost-mirov-prirod-zemel/"}
 ---
 
 # Множественность (миров, природ, земель)
