--- a/src/site/notes/Кейс Геофилософия/2 Темы/Постгуманизм.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Постгуманизм.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Постгуманизм","permalink":"/kejs-geofilosofiya/2-temy/postgumanizm/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Постгуманизм","permalink":"/kejs-geofilosofiya/2-temy/postgumanizm/"}
 ---
 
 # Постгуманизм
