--- a/src/site/notes/Кейс Геофилософия/2 Темы/Проблема оснований и безосновности.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Проблема оснований и безосновности.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Проблема оснований и безосновности","permalink":"/kejs-geofilosofiya/2-temy/problema-osnovanij-i-bezosnovnosti/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Проблема оснований и безосновности","permalink":"/kejs-geofilosofiya/2-temy/problema-osnovanij-i-bezosnovnosti/"}
 ---
 
 # Проблема оснований и безосновности
