--- a/src/site/notes/Кейс Геофилософия/2 Темы/Смерть больших нарративов.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Смерть больших нарративов.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Смерть больших нарративов","permalink":"/kejs-geofilosofiya/2-temy/smert-bolshih-narrativov/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Смерть больших нарративов","permalink":"/kejs-geofilosofiya/2-temy/smert-bolshih-narrativov/"}
 ---
 
 # Смерть больших нарративов
