--- a/src/site/notes/Кейс Геофилософия/2 Темы/Спекулятивный поворот.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Спекулятивный поворот.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Спекулятивный поворот","permalink":"/kejs-geofilosofiya/2-temy/spekulyativnyj-povorot/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Спекулятивный поворот","permalink":"/kejs-geofilosofiya/2-temy/spekulyativnyj-povorot/"}
 ---
 
 # Спекулятивный поворот
