--- a/src/site/notes/Кейс Геофилософия/2 Темы/Темные теории.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Темные теории.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Темные теории","permalink":"/kejs-geofilosofiya/2-temy/temnye-teorii/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Темные теории","permalink":"/kejs-geofilosofiya/2-temy/temnye-teorii/"}
 ---
 
 # Темные теории (Темная геофисофия)
