--- a/src/site/notes/Кейс Геофилософия/2 Темы/Философия нефти и петромодерн.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Философия нефти и петромодерн.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Философия нефти и петромодерн","permalink":"/kejs-geofilosofiya/2-temy/filosofiya-nefti-i-petromodern/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Философия нефти и петромодерн","permalink":"/kejs-geofilosofiya/2-temy/filosofiya-nefti-i-petromodern/"}
 ---
 
 # Философия нефти и петромодерн
