--- a/src/site/notes/Кейс Геофилософия/2 Темы/Геофеноменология.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Геофеноменология.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Геофеноменология","permalink":"/kejs-geofilosofiya/2-temy/geofenomenologiya/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Геофеноменология","permalink":"/kejs-geofilosofiya/2-temy/geofenomenologiya/"}
 ---
 
 
