--- a/src/site/notes/Кейс Геофилософия/2 Темы/Метафизика ландшафта.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Метафизика ландшафта.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Метафизика ландшафта","permalink":"/kejs-geofilosofiya/2-temy/metafizika-landshafta/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Метафизика ландшафта","permalink":"/kejs-geofilosofiya/2-temy/metafizika-landshafta/"}
 ---
 
 # Метафизика ландшафта
