--- a/src/site/notes/Кейс Геофилософия/2 Темы/Политики заботы.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Политики заботы.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Политики заботы","permalink":"/kejs-geofilosofiya/2-temy/politiki-zaboty/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Политики заботы","permalink":"/kejs-geofilosofiya/2-temy/politiki-zaboty/"}
 ---
 
 # Политики заботы
