--- a/src/site/notes/Кейс Геофилософия/2 Темы/Практическая геофилософия.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Практическая геофилософия.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Практическая геофилософия","permalink":"/kejs-geofilosofiya/2-temy/prakticheskaya-geofilosofiya/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Практическая геофилософия","permalink":"/kejs-geofilosofiya/2-temy/prakticheskaya-geofilosofiya/"}
 ---
 
 # Практическая геофилософия
